fixes element jumping on low density screens

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -98,8 +98,8 @@ footer {
   text-transform: uppercase;
 }
 
-.navbar-brand {
-  margin-right: 10em;
+.toplinks {
+  margin-left: 10%;
 }
 
 .topbar {
